<resources>
    <string name="app_name">VideoProject</string>
    <string name="test_cmd">测试CMD命令</string>
    <string name="video_process">视频处理</string>
    <string name="output_file_info">输出视频信息</string>    
    <string name="select_file">选择文件</string>

    <string name="video_filters">滤镜</string>
    <string name="video_crop">视频裁剪</string>
    <string name="player_start">开始</string>
    <string name="player_stop">暂停</string>
    <string name="playTime">%s / %s</string>
    <string name="fileName">文件名</string>
    <string name="v_10">10</string>

    <!--滤镜类型-->
    <string name="filters_1">素描</string>
    <string name="filters_2">鲜明</string>
    <string name="filters_3">旋转90</string>
    <string name="filters_4">九宫格</string>
    <string name="filters_5">矩形</string>
    <string name="filters_6">翻转</string>
    <string name="filters_7">锐化</string>
    <string name="filters_8">文字</string>
    <string name="push_rtmp">RTMP推流</string>
    <string name="switchCamera">切换摄像头</string>
    <string name="tgBtn_start">开始</string>
    <string name="tgBtn_stop">停止</string>
    <string name="btn_mute">静音</string>
    <string name="btn_cancel_mute">取消静音</string>
</resources>