<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_test_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_cmd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_output_file_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_file_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_test_cmd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_video_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_process"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_output_file_info" />

</androidx.constraintlayout.widget.ConstraintLayout>